@@ -17,6 +17,7 @@ Revision history for DBIx::Class
           notably on_connect* failures now properly abort the entire connect
         - Fix corner case of stringify-only overloaded objects being used in
           create()/populate()
+        - Fix several corner cases with Many2Many over custom relationships
         - Fix t/52leaks.t failures on compilerless systems (RT#104429)
         - Fix t/storage/quote_names.t failures on systems with specified Oracle
           test credentials while missing the optional Math::Base36
